# ros2_robot_ur5e

./: .setup_assistant  CMakeLists.txt  LICENSE  README.md  package.xml
config/: gz_sim_config.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers_test.yaml  ros_gz_bridge.yaml  ur_calibration.yaml  ur_control.yaml
description/: gazebo.xacro  robot.control.xacro  robot.srdf.xacro  robot.ur5e.xacro  robot.urdf.xacro  ur5e.control.xacro  ur5e.gpio.xacro  ur5e.sensor.xacro  ur5e.srdf.xacro  ur5e.urdf.xacro
launch/: robot.launch.py  rsp.launch.py
launch/modules/: __init__.py  common_definition.py  gz.launch.py  hardware.launch.py  move_group.launch.py  rsp.launch.py  rviz.launch.py  spawn_controllers.launch.py
meshes/ur5e/visual/: base.dae  forearm.dae  shoulder.dae  upperarm.dae  wrist1.dae  wrist2.dae  wrist3.dae
rviz/: default.rviz
scripts/: build.sh
scripts/python/: kill_process_ruby.py  rviz_change_namespace.py
worlds/: default.world
