<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_robot_ur5e</name>
    <version>0.0.1</version>
    <description>YOGYUI ROS2 Project - Universal Robots UR5e</description>
    <maintainer email="lee2002w@gmail.com">seung-hee.lee</maintainer>
    <author email="lee2002w@gmail.com">seung-hee.lee</author>
    <license>MIT License</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>rclpy</depend>
    <depend>ur_client_library</depend>
    <depend>ur_controllers</depend>
    <depend>ur_dashboard_msgs</depend>
    <depend>ur_msgs</depend>

    <exec_depend>xacro</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>gz_ros2_control</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>moveit_ros_move_group</exec_depend>
    <exec_depend>moveit_kinematics</exec_depend>
    <exec_depend>moveit_planners</exec_depend>
    <exec_depend>moveit_simple_controller_manager</exec_depend>
    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
